Ditch Truth from aaa-cli-jar
Simple JUnit assertions are good enough to cover the tests here, ditch
Truth.

Change-Id: Ic2f80c5ae18e84c985cb0b8021d7e9ba4c4b94d0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>